[LI-34] fix:  profile 스웨거 작성, @CurrentUser 소셜 로그인 한 멤버로 적용하도록 JWT 내에 userId 추가